# PropChain-contract

./: Cargo.toml  README.md
.github/workflows/: ci.yml  documentation.yml
contracts/analytics/: Cargo.toml
contracts/analytics/src/: lib.rs
contracts/compliance_registry/: lib.rs
contracts/escrow/src/: tests.rs
contracts/fees/src/: lib.rs
contracts/fractional/: Cargo.toml
contracts/fractional/src/: lib.rs
contracts/insurance/src/: lib.rs
contracts/ipfs-metadata/src/: lib.rs  tests.rs
contracts/lib/src/: lib.rs  tests.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/property-token/src/: lib.rs
contracts/traits/: Cargo.toml
contracts/traits/src/: lib.rs
contracts/zk-compliance/: lib.rs
docs/: contracts.md
security-audit/src/: main.rs
